--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Commit and push if it changed
         run: |
           git diff
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config user.name "Automated"
+          git config user.email "actions@users.noreply.github.com"
           git add seriess_data.csv
           git commit -m "Update FRED series data" -a || echo "No changes to commit"
-          git push
+          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/acarter881/FRED_Series_Updates.git
