--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: |
+        run: |-
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
@@ -31,10 +31,10 @@ jobs:
         run: python FRED_series_updates.py
 
       - name: Commit and push if it changed
-        run: |
+        run: |-
+          git config user.name "Automated"
+          git config user.email "actions@users.noreply.github.com"
           git diff
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
           git add seriess_data.csv
-          git commit -m "Update FRED series data" -a || echo "No changes to commit"
-          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/acarter881/FRED_Series_Updates.git
+          git commit -m "Update FRED series data" -a || exit 0
+          git push
